--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
                 <!-- Dashboard Content -->
                 <div id="dashboard-content">
                     <div class="welcome-card">
-                        <div class="welcome-title">Welcome back, John Doe!</div>
+                        <div class="welcome-title">Welcome back, Thomas Oduol!</div>
                         <div class="welcome-subtitle">Your POA Internet experience awaits</div>
                     </div>
 
@@ -1021,7 +1021,7 @@
                     <div class="profile-header">
                         <div class="profile-avatar">JD</div>
                         <div class="profile-info">
-                            <h2>John Doe</h2>
+                            <h2>Thomas Odul</h2>
                             <p>john.doe@email.com</p>
                         </div>
                     </div>
@@ -1031,7 +1031,7 @@
                         <form>
                             <div class="form-group">
                                 <label>Full Name</label>
-                                <input type="text" value="John Doe" />
+                                <input type="text" value="Thomas Odul" />
                             </div>
                             <div class="form-group">
                                 <label>Email Address</label>
