--- a/index.html.html
+++ b/index.html.html
@@ -926,7 +926,7 @@
                 <!-- Dashboard Content -->
                 <div id="dashboard-content">
                     <div class="welcome-card">
-                        <div class="welcome-title">Welcome back, John Doe!</div>
+                        <div class="welcome-title">Welcome back, Thomas Oduol!</div>
                         <div class="welcome-subtitle">Your POA Internet experience awaits</div>
                     </div>
 
