--- a/index.html
+++ b/index.html
@@ -1021,8 +1021,8 @@
                     <div class="profile-header">
                         <div class="profile-avatar">JD</div>
                         <div class="profile-info">
-                            <h2>Thomas Odul</h2>
-                            <p>john.doe@email.com</p>
+                            <h2>Thomas Oduol</h2>
+                            <p>thomas.oduol@poainternet.net</p>
                         </div>
                     </div>
 
@@ -1031,11 +1031,11 @@
                         <form>
                             <div class="form-group">
                                 <label>Full Name</label>
-                                <input type="text" value="Thomas Odul" />
+                                <input type="text" value="Thomas Oduol" />
                             </div>
                             <div class="form-group">
                                 <label>Email Address</label>
-                                <input type="email" value="john.doe@email.com" />
+                                <input type="email" value="thomas.oduol@poainternet.net" />
                             </div>
                             <div class="form-group">
                                 <label>Phone Number</label>
