--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@
                 <!-- Profile Content -->
                 <div id="profile-content" class="hidden">
                     <div class="profile-header">
-                        <div class="profile-avatar">JD</div>
+                        <div class="profile-avatar">TO</div>
                         <div class="profile-info">
                             <h2>Thomas Oduol</h2>
                             <p>thomas.oduol@poainternet.net</p>
